-- modello_ER.dbml (dbdiagram.io)

Table Aeroporto {
  id_aeroporto int [pk, increment]
  nome varchar
  città varchar
  paese varchar
  codice_IATA char(3)
}

Table Tratta {
  id_tratta int [pk, increment]
  aeroporto_partenza int [ref: > Aeroporto.id_aeroporto]
  aeroporto_arrivo int [ref: > Aeroporto.id_aeroporto]
  durata_prevista time
}

Table Volo {
  id_volo int [pk, increment]
  id_tratta int [ref: > Tratta.id_tratta]
  data_partenza date
  ora_partenza time
  numero_volo varchar
  stato varchar
  modello varchar
}

Table Passeggero {
  id_passeggero int [pk, increment]
  nome varchar
  cognome varchar
  email varchar
  telefono varchar
  documento_identità varchar
}

Table Prenotazione {
  id_prenotazione int [pk, increment]
  data_prenotazione date
  metodo_pagamento varchar
  id_passeggero int [ref: > Passeggero.id_passeggero]
}

Table Biglietto {
  id_biglietto int [pk, increment]
  id_prenotazione int [ref: > Prenotazione.id_prenotazione]
  id_volo int [ref: > Volo.id_volo]
  classe varchar
  posto varchar
  check_in_effettuato boolean
  prezzo decimal
  qr_code varchar
  stato varchar
}
